# StreamingPrototype

./: .gitignore  .gitmodules  CMakeLists.txt  FindBoost.lua  FindProtobuf.lua  README.md  premake5.lua
Protocol/: message.pb.cc  message.pb.h  message.proto
Protocol/StreamingFormat/: Message.java
Resources/Buddha/: buddha.mtl
Resources/Conf/: conf_room_3.mtl  conf_room_5.mtl  conf_room_6.mtl  conference.mtl  small_conference_room_with_light.mtl
Resources/CornellBox/: long-box.blend  long-box.mtl  long-box.objm  mid-box-colored-reordered.blend  mid-box-colored-reordered.mtl  mid-box-colored-reordered.objm  mid-box-colored.blend  mid-box-colored.mtl  mid-box-colored.objm  mid-box.blend  mid-box.mtl  mid-box.objm
Resources/Drag/: a_dragon_3.mtl  a_dragon_with_light.mtl
Resources/LF/: LF_crown_1.ppm  LF_crown_10.ppm  LF_crown_11.ppm  LF_crown_13.ppm  LF_crown_14.ppm  LF_crown_15.ppm  LF_crown_2.ppm  LF_crown_3.ppm  LF_crown_5.ppm  LF_crown_6.ppm  LF_crown_7.ppm  LF_crown_8.ppm  LF_crown_9.ppm
Resources/Mix/: mix.mtl
Resources/SceneImages/: Aerial.512.ppm  crown_1.ppm  crown_10.ppm  crown_11.ppm  crown_12.ppm  crown_13.ppm  crown_14.ppm  crown_15.ppm  crown_16.ppm  crown_17.ppm  crown_18.ppm  crown_19.ppm  crown_2.ppm  crown_20.ppm  crown_3.ppm  crown_4.ppm  crown_5.ppm  crown_6.ppm  crown_7.ppm  crown_8.ppm  crown_9.ppm  rend.ppm
Resources/Sponza/: sponza-small-no-clothes.mtl  sponza-small.mtl
SP/: CMakeLists.txt
SP/include/: Common.hpp
SP/src/: Common.cpp  ConfigManager.cpp  ConfigManager.hpp  Connection.cpp  Connection.hpp  Encode.hpp  Encoder.hpp  LightField.cpp  LightField.hpp  Packet.cpp  Packet.hpp  PtRenderer.cpp  Render.hpp  Renderer.hpp  SceneTracker.cpp  SceneTracker.hpp  Server.cpp  Server.hpp  SyncBuffer.hpp  main.cpp  message.pb.cc  message.pb.h  message.proto  packet.pb.cc  packet.pb.h  packet.proto
SP/src/Encoder/: Encoder.hpp  EncoderImpl.cpp  EncoderImpl.hpp
SP/src/Network/: Connection.cpp  Connection.hpp  Server.cpp  Server.hpp
SP/src/Renderer/: ApiEngine.cpp  ApiEngine.hpp  BxDFHelper.cpp  BxDFHelper.hpp  Camera.hpp  CorrelatedMultiJitterSampler.cpp  CorrelatedMultiJitterSampler.hpp  DefaultList.cpp  DefaultList.hpp  DifferentialGeometry.cpp  DifferentialGeometry.hpp  MathUtility.cpp  MathUtility.hpp  Output.cpp  Output.hpp  Path.cpp  Path.hpp  PtRenderer.cpp  PtRenderer.hpp  RandomSampler.cpp  RandomSampler.hpp  RenderOutput.cpp  RenderOutput.hpp  Renderer.cpp  Renderer.hpp  RenderingManager.cpp  RenderingManager.hpp  Sampler.cpp  Sampler.hpp  SceneTracker.cpp  SceneTracker.hpp  SimpleRenderer.cpp  SimpleRenderer.hpp
SP/src/Renderer/Scene/: Camera.cpp  Camera.hpp  Iterator.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Shape.cpp  Shape.hpp  Texture.cpp  Texture.hpp
SP/src/Renderer/Scene/IO/: ImageIO.cpp  ImageIO.hpp  ImageIOImpl.cpp  SceneIO.cpp  SceneIO.hpp  SceneIOImpl.cpp
Test/src/: client.cpp
cmake/Modules/: FindOpenImageIO.cmake  Findx264.cmake
